还没完全通

--- a/demo-shiro-parent/demo-shiro/src/main/resources/resources.properties
+++ b/demo-shiro-parent/demo-shiro/src/main/resources/resources.properties
@@ -1,24 +1,27 @@
 #dataSource configure
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/shiro2?tinyInt1isBit=false
-jdbc.username=root
-jdbc.password=123456
-jdbc.initialSize=3 
-jdbc.minIdle=2
-jdbc.maxActive=60
-jdbc.maxWait=60000
-jdbc.timeBetweenEvictionRunsMillis=60000
-jdbc.minEvictableIdleTimeMillis=30000
-jdbc.validationQuery=SELECT 'x'
-jdbc.testWhileIdle=true
-jdbc.testOnBorrow=false
-jdbc.testOnReturn=false
-jdbc.poolPreparedStatements=true
-jdbc.maxPoolPreparedStatementPerConnectionSize=20
-jdbc.removeAbandoned=true
-jdbc.removeAbandonedTimeout=120
-jdbc.logAbandoned=false
-jdbc.filters=stat
+db.driver:com.mysql.jdbc.Driver
+db.url=jdbc:mysql://127.0.0.1:3306/shiro2
+db.username=root
+db.password=123456
+#\u5b9a\u4e49\u521d\u59cb\u8fde\u63a5\u6570
+db.initialSize=20
+#\u5b9a\u4e49\u6700\u5927\u8fde\u63a5\u6570
+db.maxActive=40
+#\u5b9a\u4e49\u6700\u5927\u7a7a\u95f2
+db.maxIdle=20
+#\u5b9a\u4e49\u6700\u5c0f\u7a7a\u95f2
+db.minIdle=1
+#\u5b9a\u4e49\u6700\u957f\u7b49\u5f85\u65f6\u95f4
+db.maxWait=60000
+#
+db.timeBetweenEvictionRunsMillis=3000
+#
+db.minEvictableIdleTimeMillis=300000
+#
+db.maxPoolPreparedStatementPerConnectionSize=20
+#
+druid.filters=
+
 
 #druid datasource
 #\ufffd\u03bf\ufffd https://github.com/alibaba/druid/wiki/%E9%85%8D%E7%BD%AE_DruidDataSource%E5%8F%82%E8%80%83%E9%85%8D%E7%BD%AE
