--- a/demo-shiro-parent/demo-shiro/src/main/resources/resources.properties
+++ b/demo-shiro-parent/demo-shiro/src/main/resources/resources.properties
@@ -1,6 +1,10 @@
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://127.0.0.1:3306/shiro2?useUnicode=true&characterEncoding=utf-8
+jdbc.username=root
+jdbc.password=123456
 #dataSource configure
-db.driver:com.mysql.jdbc.Driver
-db.url=jdbc:mysql://127.0.0.1:3306/shiro2
+db.driver=com.mysql.jdbc.Driver
+db.url=jdbc:mysql://127.0.0.1:3306/shiro2?useUnicode=true&characterEncoding=utf-8
 db.username=root
 db.password=123456
 #\u5b9a\u4e49\u521d\u59cb\u8fde\u63a5\u6570
