--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<module>shiro-demo2</module>
 		<module>mybase</module>
 		<module>demo-shiro-parent</module>
+		<module>demo-activemq-parent</module>
 	</modules>
 	<properties>
 		<!-- Common libs -->
@@ -56,8 +57,11 @@
 				<artifactId>spring-aop</artifactId>
 				<version>${org.springframework.version}</version>
 			</dependency>
-			<!-- <dependency> <groupId>org.springframework</groupId> <artifactId>spring-aspects</artifactId> 
-				<version>${org.springframework.version}</version> </dependency> -->
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-aspects</artifactId>
+				<version>${org.springframework.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-beans</artifactId>
@@ -191,7 +195,7 @@
 				<artifactId>jackson-databind</artifactId>
 				<version>2.3.3</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>com.alibaba</groupId>
 				<artifactId>fastjson</artifactId>
@@ -383,6 +387,16 @@
 				<artifactId>commons-email</artifactId>
 				<version>1.2</version>
 			</dependency>
+			<dependency>
+				<groupId>aopalliance</groupId>
+				<artifactId>aopalliance</artifactId>
+				<version>1.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.aspectj</groupId>
+				<artifactId>aspectjweaver</artifactId>
+				<version>1.7.3</version>
+			</dependency>
 			<!--httpclient -->
 			<dependency>
 				<groupId>commons-httpclient</groupId>
@@ -395,7 +409,7 @@
 				<version>1.6</version>
 			</dependency>
 
-			
+
 			<!-- shiro相关 -->
 			<dependency>
 				<groupId>org.apache.shiro</groupId>
@@ -417,14 +431,14 @@
 				<artifactId>shiro-freemarker-tags</artifactId>
 				<version>0.1</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.freemarker</groupId>
 				<artifactId>freemarker</artifactId>
-				 <version>2.3.20</version>
+				<version>2.3.20</version>
 			</dependency>
-			
-				<!-- poi相关 -->
+
+			<!-- poi相关 -->
 			<dependency>
 				<groupId>org.apache.poi</groupId>
 				<artifactId>poi</artifactId>
@@ -455,7 +469,29 @@
 				<artifactId>poi-scratchpad</artifactId>
 				<version>${poi-version}</version>
 			</dependency>
-			
+			<!-- ACTIVEMQ 相关 -->
+			<dependency>
+				<groupId>org.jboss.netty</groupId>
+				<artifactId>netty</artifactId>
+				<version>3.2.5.Final</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.activemq</groupId>
+				<artifactId>activemq-all</artifactId>
+				<version>5.8.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.activemq</groupId>
+				<artifactId>activemq-pool</artifactId>
+				<version>5.8.0</version>
+			</dependency>
+			<!-- ACTIVEMQ 相关 -->
+			<dependency>
+				<groupId>javax.mail</groupId>
+				<artifactId>mail</artifactId>
+				<version>1.4.7</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 	<build>
