--- a/pay-parent/pay-common-core/pom.xml
+++ b/pay-parent/pay-common-core/pom.xml
@@ -27,7 +27,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
@@ -190,26 +189,36 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.google.zxing/core -->
-		<!-- <dependency> <groupId>com.google.zxing</groupId> <artifactId>core</artifactId> 
-			</dependency> -->
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
-		<!-- <dependency> <groupId>com.google.code.gson</groupId> <artifactId>gson</artifactId> 
-			</dependency> -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core -->
-		<!-- <dependency> <groupId>org.hamcrest</groupId> <artifactId>hamcrest-core</artifactId> 
-			</dependency> <dependency> <groupId>org.jdom</groupId> <artifactId>jdom</artifactId> 
-			</dependency> -->
 		<dependency>
-			<groupId>alipay</groupId>
-			<artifactId>alipay-trade-sdk</artifactId>
-			<version>1.0</version>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>jdom</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>alipay</groupId>
 			<artifactId>alipay-sdk-java20151021120052</artifactId>
-			<version>1.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>alipay</groupId>
+			<artifactId>alipay-trade-sdk</artifactId>
 		</dependency>
 		<!-- http://mvnrepository.com/artifact/jaxen/jaxen -->
 
@@ -232,13 +241,16 @@
 			<artifactId>hibernate-validator</artifactId>
 		</dependency>
 
-		<!-- <dependency> <groupId>jaxen</groupId> <artifactId>jaxen</artifactId> 
-			</dependency> -->
+		<dependency>
+			<groupId>jaxen</groupId>
+			<artifactId>jaxen</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 		</dependency>
 		<!-- Other Common libs End -->
+
 	</dependencies>
 </project>
