--- a/pay-parent/pay-web-boss/pom.xml
+++ b/pay-parent/pay-web-boss/pom.xml
@@ -11,10 +11,10 @@
   <artifactId>pay-web-boss</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
-  <name>pay-web-boss Maven Webapp</name>
+  <name>pay-web-boss</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-   	<dependency>
+<dependency>
 			<groupId>zf-demo</groupId>
 			<artifactId>pay-common-core</artifactId>
 			<version>${project.parent.version}</version>
@@ -25,6 +25,7 @@
 			<artifactId>pay-service</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -89,8 +90,53 @@
 			<version>6.0.37</version>
 			<scope>provided</scope>
 		</dependency>
-  </dependencies>
-  <build>
-    <finalName>pay-web-boss</finalName>
-  </build>
+	</dependencies>
+	<!-- 打包插件 -->
+	<build>
+		<finalName>pay-web-boss</finalName>
+
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<uniqueVersion>false</uniqueVersion>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.8</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<failOnError>true</failOnError>
+					<verbose>true</verbose>
+					<fork>true</fork>
+					<compilerArgument>-nowarn</compilerArgument>
+					<source>1.7</source>
+					<target>1.7</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.1.2</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
