--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<!-- 各种示例的父工程 -->
 	<groupId>zf-demo</groupId>
@@ -28,8 +27,10 @@
 		<module>mybase</module>
 		<module>demo-shiro-parent</module>
 		<module>demo-activemq-parent</module>
-		<module>pay-parent</module>
-	</modules>
+<!-- 		<module>pay-parent</module>
+ -->
+    <module>reflect</module>
+  </modules>
 	<properties>
 		<!-- Common libs -->
 		<project_parent_version>0.0.3-SNAPSHOT</project_parent_version>
