--- a/demo-activemq-parent/pom.xml
+++ b/demo-activemq-parent/pom.xml
@@ -1,7 +1,5 @@
-<?xml version="1.0"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>zf-demo</groupId>
@@ -26,5 +24,6 @@
 		<module>demo-mqconsumer-B</module>
 		<module>demo-mqproducer-A</module>
 		<module>demo-mqproducer-B</module>
-	</modules>
+    <module>demo-activemq-api</module>
+  </modules>
 </project>
