--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,9 @@
     <module>my-cloud</module>
     <module>demo-socket-io</module>
     <module>demo-netty-scoket</module>
+        <module>demo-redis</module>
+        <module>demo-single</module>
+		<module>jvm-test</module>
 	</modules>
 	<properties>
 		<!-- Common libs -->
