--- a/java-demo/pom.xml
+++ b/java-demo/pom.xml
@@ -9,9 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>juc-demo</artifactId>
+    <artifactId>java-demo</artifactId>
 
-    <name>juc-demo</name>
+    <name>java-demo</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
