--- a/demo-netty/pom.xml
+++ b/demo-netty/pom.xml
@@ -23,6 +23,17 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.11.4</version>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.48.Final</version>
+        </dependency>
+        <dependency>
+
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
